tests/snapshots/serde__de_uint32array_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array([0, 1, 2, 3, 4, 5, 6, 7, 8])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            2,
            0,
            0,
            0,
            3,
            0,
            0,
            0,
            4,
            0,
            0,
            0,
            5,
            0,
            0,
            0,
            6,
            0,
            0,
            0,
            7,
            0,
            0,
            0,
            8,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Uint32Array,
        buffer: *0,
        byte_offset: 0,
        length: 9,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

